--- a/template/iCMS/comment/api.json.htm
+++ b/template/iCMS/comment/api.json.htm
@@ -1,2 +1,2 @@
-<!--{iCMS:comment:list row="5" id=$id iid=$iid appid=$appid date_format="Y-m-d" page="true"}-->
+<!--{iCMS:comment:list vars=$vars page="true"}-->
 <!--{$comment_list|json_encode}-->
