--- a/template/iCMS/user/profile/bind.htm
+++ b/template/iCMS/user/profile/bind.htm
@@ -1,4 +1,4 @@
-<div class="account_bind" id="profile_form">
+<div class="account_bind" id="user_form">
   <div class="account_bind_title"> 绑定帐号可以把您的文章同步给更多好友。 <a class="bind_help" target="_blank" href="<!--{$site.urls.public}-->/account_bind.html">什么是绑定帐号，绑定帐号有什么用？</a></div>
   <ul class="bind_logo">
     <li>
@@ -17,7 +17,7 @@
     </li>
   </ul>
 </div>
-<div class="clear"></div>
+<div class="clearfix"></div>
 <form action="" method="post" id="myform">
   <input type="hidden" name="user_id" id="user_id" value="">
   <input type="hidden" name="user_name" id="user_name" value="">
