--- a/template/iCMS/user/profile/setpassword.htm
+++ b/template/iCMS/user/profile/setpassword.htm
@@ -1,8 +1,8 @@
-<div id="profile_form" class="profile_password">
+<div id="user_form" class="profile_password">
 	<form id="resetpassword" action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
 	<input name="action" type="hidden" value="profile" />
 	<input name="pg" type="hidden" value="setpassword" />
-	<div class="profile_title"> <span>修改密码</span> </div>
+	<div class="title"> <span>修改密码</span> </div>
 	<dl>
 		<dd>现在的密码：</dd>
 		<dt class="clearfix">
