--- a/template/iCMS/comment.box.htm
+++ b/template/iCMS/comment.box.htm
@@ -1,14 +1,14 @@
 <script id="comment_box" type="text/html">
-<div class="zm-comment-box">
-  <i class="iCMS-icon iCMS-icon-spike zm-comment-bubble" style="display: inline; left: 481px;"></i>
-  <div class="zm-comment-list"></div>
-  <div class="zm-comment-form zm-comment-box-ft">
-    <div class="zm-comment-ipt">
-      <input class="zm-comment-textarea" type="text" value="">
+<div class="commentApp-box">
+  <i class="iCMS-icon iCMS-icon-spike commentApp-bubble" style="display: inline; left: 481px;"></i>
+  <div class="commentApp-list"></div>
+  <div class="commentApp-form commentApp-box-ft">
+    <div class="commentApp-ipt">
+      <input class="commentApp-textarea" type="text" value="">
     </div>
-    <div class="zm-command clearfix">
+    <div class="app-command clearfix">
       <a href="#" id="addnew" class="btn btn-primary">评论</a>
-      <a href="###" id="closeform" class="zm-command-cancel">取消</a>
+      <a href="###" id="closeform" class="app-command-cancel">取消</a>
     </div>
   </div>
 </div>
