--- a/template/iCMS/user/manage.htm
+++ b/template/iCMS/user/manage.htm
@@ -6,18 +6,18 @@
     <meta name="keywords" content="<!--{$site.keywords}-->" />
     <meta name="description" content="<!--{$site.description}-->"/>
     <!--{iCMS:public:ui}-->
-    <link rel="stylesheet" href="<!--{$site.urls.ui}-->/user-6.0.0.css" type="text/css" />
+    <link rel="stylesheet" href="<!--{$site.urls.ui}-->/userApp-6.0.0.css" type="text/css" />
     <link rel="stylesheet" href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" />
   </head>
   <body>
     <!--{include file="{iTPL}/header.htm"}-->
     <div id="body_wrap" class="clearfix">
-      <div class="profile_box">
+      <div class="userApp-box" id="manage_box">
         <div class="piece">
           <div class="piece_hd"> <b class="hl"></b> <b class="hr"></b> </div>
           <div class="piece_bd clearfix">
-            <div class="pro_sidebar fl">
-              <h1><i class="icon_user"></i> 我的内容</h1>
+            <div class="sidebar fl">
+              <h1><i class="fa fa-dashboard"></i> 我的内容</h1>
               <div class="base_info">
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/publish'}-->"<!--{if $pg=="publish"}--> class="c"<!--{/if}-->><i class="fa fa-edit"></i> 发表文章</a></p>
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/category'}-->"<!--{if $pg=="category"}--> class="c"<!--{/if}-->><i class="fa fa-list-alt"></i> 我的分类</a></p>
@@ -29,9 +29,9 @@
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/manage/fans'}-->"<!--{if $pg=="fans"}--> class="c"<!--{/if}-->><i class="fa fa-group"></i> 我的粉丝</a></p>
               </div>
             </div>
-            <div class="pro_contents fl">
-              <div id="profile_form">
-                <div class="profile_basic">
+            <div class="contents fl">
+              <div id="user_form">
+                <div class="basic">
                   <form action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
                   <input name="action" type="hidden" value="manage" />
                   <input name="pg" type="hidden" value="<!--{$pg}-->" />
