--- a/template/iCMS/user/profile.htm
+++ b/template/iCMS/user/profile.htm
@@ -6,17 +6,17 @@
     <meta name="keywords" content="<!--{$site.keywords}-->" />
     <meta name="description" content="<!--{$site.description}-->"/>
     <!--{iCMS:public:ui}-->
-    <link rel="stylesheet" href="<!--{$site.urls.ui}-->/user-6.0.0.css" type="text/css" />
+    <link rel="stylesheet" href="<!--{$site.urls.ui}-->/userApp-6.0.0.css" type="text/css" />
     <link rel="stylesheet" href="<!--{$site.urls.public}-->/theme/default.css" type="text/css" />
   </head>
   <body>
     <!--{include file="{iTPL}/header.htm"}-->
     <div id="body_wrap" class="clearfix">
-      <div class="profile_box">
+      <div class="userApp-box" id="profile_box">
         <div class="piece">
           <div class="piece_hd"> <b class="hl"></b> <b class="hr"></b> </div>
           <div class="piece_bd clearfix">
-            <div class="pro_sidebar fl">
+            <div class="sidebar fl">
               <h1><i class="icon_user"></i> 账号设置</h1>
               <div class="base_info">
                 <a href="<!--{iCMS:router url='/user/profile/base'}-->"<!--{if $pg=="base"}--> class="c"<!--{/if}-->><i class="fa fa-info-circle"></i> 基本信息</a><br>
@@ -26,8 +26,8 @@
                 <a href="<!--{iCMS:router url='/user/profile/custom'}-->"<!--{if $pg=="custom"}--> class="c"<!--{/if}-->><i class="fa fa-picture-o"></i> 个人封面</a><br>
               </div>
             </div>
-            <div class="pro_contents fl">
-              <div id="profile_form">
+            <div class="contents fl">
+              <div id="user_form">
                 <!--{switch from=$pg}-->
                   <!--{case value="base"}-->
                     <!--{include file="./profile/base.htm" import="true"}-->
