--- a/template/iCMS/user/profile/avatar.htm
+++ b/template/iCMS/user/profile/avatar.htm
@@ -1,13 +1,13 @@
 <script src="<!--{$site.urls.lib}-->/meitu.xiuxiu.js" type="text/javascript"></script>
-<div id="profile_form">
-	<div id="avatarEditor">
+<div id="user_form">
+	<div id="avatar_editor">
 	</div>
 </div>
 <script type="text/javascript">
 
 window.onload=function(){
   xiuxiu.setLaunchVars("avatarPreview", {visible:true, label:"裁剪预览",small:{width:30,height:30}, medium:{width:60,height:60},large:{width:150,height:150, label:"大尺寸"}});
-  xiuxiu.embedSWF("avatarEditor",5,"100%","450");
+  xiuxiu.embedSWF("avatar_editor",5,"100%","450");
   xiuxiu.setUploadURL("<!--{iCMS:router url='/user'}-->");
   xiuxiu.onInit = function (){
     xiuxiu.loadPhoto("<!--{$me.avatar}-->");
