--- a/template/iCMS/user/profile/base.htm
+++ b/template/iCMS/user/profile/base.htm
@@ -4,7 +4,7 @@
 	<input name="pg" type="hidden" value="base" />
 
 	<div class="title"> <span>基本资料</span> </div>
-	<dl>
+	<dl class="base">
 		<dd>昵称：</dd>
 		<dt class="unick"> <input name="nickname" type="text"<!--{if $userdata.unickEdit}--> disabled<!--{/if}--> value="<!--{$me.nickname}-->">
 		<div class="iner" style="color:#666;"><span>*</span>昵称只能修改一次哦^_^</div>
