--- a/public/ui/iCMS-6.0.0.css
+++ b/public/ui/iCMS-6.0.0.css
@@ -133,10 +133,12 @@ a:hover>.iCMS-icon-no-help { background-position: -71px -170px }
 a, a:hover, a:focus { color: #057AFD }
 .btn, .add-on, .navbar-inner, .label, .navbar a, .switch-left, .switch-right { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important }
 .d-content { color: #222 }
+/* ==iPHP== */
 .iPHP-msg { text-align: center; margin: 5px; padding: 4px }
 .iPHP-msg .label { padding: 8px 10px; font-size: 14px; letter-spacing: 1px; line-height: 160% }
 .iPHP-msg pre { width: 800px; text-align: left }
 .iPHP-msg i { font-size: 18px }
+/* ==modal== */
 .modal { margin: 0px !important }
 .modal .modal-header { background-color: #1575d5; background-image: -moz-linear-gradient(top, #1d7fe2, #0865c2); background-image: -ms-linear-gradient(top, #1d7fe2, #0865c2); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1d7fe2), to(#0865c2)); background-image: -webkit-linear-gradient(top, #1d7fe2, #0865c2); background-image: -o-linear-gradient(top, #1d7fe2, #0865c2); background-image: linear-gradient(top, #1d7fe2, #0865c2); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1d7fe2', endColorstr='#0865c2', GradientType=0); padding: 3px 15px; border-radius: 6px 6px 0 0; border: 1px solid #0D6EB8; box-shadow: 0 1px 0 rgba(255, 255, 255, .1) inset, 0 1px 1px rgba(0, 0, 0, .2); margin: -1px -1px 0; line-height: 14px }
 .modal .modal-header h3 { color: #fff; text-shadow: 0 1px 1px rgba(0, 0, 0, .4); font-size: 15px; font-weight: 700 }
@@ -148,6 +150,7 @@ a, a:hover, a:focus { color: #057AFD }
 #modal-overlay { position: fixed; top: 0px; left: 0px; z-index: 100; width: 100%; height: 100% }
 .modal-overlayBG { background-color: #000; opacity: 0.3; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)"; filter: alpha(opacity=30); -moz-opacity: 0.3 }
 .modal .buttons { padding: 0 15px; margin-bottom: 15px; text-align: right; background: #fff }
+/* ==piece== */
 .piece { border-radius: 10px }
 .piece .piece_hd { border-radius: 10px 10px 0 0 }
 .piece .piece_ft { border-radius: 0 0 10px 10px }
@@ -160,6 +163,7 @@ a, a:hover, a:focus { color: #057AFD }
 .piece .piece_bd:after { clear: both }
 .piece .piece_ft .fl { position: absolute\9; top: 0\9; left: -10px\9; background: url(img/piece_ft_left.png) no-repeat 0 0\9; _background-image: none; _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='img/piece_ft_left.png', sizingMethod='scale') }
 .piece .piece_ft .fr { position: absolute\9; top: 0\9; right: -10px\9; background: url(img/piece_ft_right.png) no-repeat 0 0\9; _background-image: none; _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='img/piece_ft_right.png', sizingMethod='scale') }
+/* ==mod== */
 .mod { border: 1px solid #dadada }
 .mod .hd { overflow: hidden; padding: 0 10px; height: 28px; text-align: right; line-height: 29px }
 .mod .hd h3 { float: left; font-size: 14px }
@@ -174,21 +178,27 @@ a, a:hover, a:focus { color: #057AFD }
 .mod .hd h3 span { padding-left: 10px; color: #ccc; letter-spacing: 1px; font: italic 16px/18px Palatino Linotype, simsun }
 .mod .hd h3 a:link, .mod .hd h3 a:visited, .mod .hd h3 a:hover { color: #369; font-weight: bold; line-height: 18px }
 .mod .bd { overflow: hidden }
+/* ==iconfont== */
 @font-face { font-family: 'iconfont'; src: url('iconfont/iconfont.eot'); src: url('iconfont/iconfont.eot?#iefix') format('embedded-opentype'), url('iconfont/iconfont.woff') format('woff'), url('iconfont/iconfont.ttf') format('truetype'), url('iconfont/iconfont.svg#iconfont') format('svg') }
 .iconfont { font-family: "iconfont" !important; font-size: 16px; font-style: normal; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale }
+/* ==iCMS== */
+/* ==pagination== */
 .iCMS-pagination { margin: 10px; clear: both; height: 30px; position: relative; text-align: center }
 .iCMS-pagination a, .iCMS-pagination span { display: inline-block; padding: 4px 12px; line-height: 20px; text-decoration: none; background-color: #fff; border: 1px solid #ddd; border-left-width: 0 }
 .iCMS-pagination a:hover, .iCMS-pagination a:focus { background-color: #f5f5f5 }
 .iCMS-pagination a.page_nowindex { color: #999; cursor: default }
 .iCMS-pagination a:first-child, .iCMS-pagination span:first-child { border-left-width: 1px; -webkit-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px; border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -moz-border-radius-topleft: 4px }
 .iCMS-pagination a:last-child, .iCMS-pagination span:last-child { -webkit-border-top-right-radius: 4px; border-top-right-radius: 4px; -webkit-border-bottom-right-radius: 4px; border-bottom-right-radius: 4px; -moz-border-radius-topright: 4px; -moz-border-radius-bottomright: 4px }
-.iCMS-hover-toggle .caret { margin-top: 10px; margin-left: 0px }
-.iCMS-hover-wrap { display: none; z-index: 999; position: absolute; top: 0; left: 0; min-width: 120px; border-radius: 0 0 3px 3px; background: #FFF }
+
 #iCMS-nav-profile { display: none }
-#iCMS-nav-profile .top_nav_profile { display: inline-block; padding-right: 10px }
-#iCMS-nav-profile .iCMS-user-home { text-decoration: none }
-#iCMS-nav-profile .iCMS-user-home .avatar { width: 25px; height: 25px; border: 1px solid rgba(0, 0, 0, .1); box-shadow: 0 1px 0 rgba(255, 255, 255, .1) }
-#iCMS-nav-profile .iCMS-user-home .dropdown-menu>li>a { font-size: 14px }
+.iCMS-profile-wrap { display: inline-block; padding-right: 10px }
+.iCMS-profile-wrap .caret{margin-top: 10px;}
+.iCMS-profile-wrap .iCMS-user-home { text-decoration: none }
+.iCMS-profile-wrap .iCMS-user-home .avatar { width: 25px; height: 25px; border: 1px solid rgba(0, 0, 0, .1); box-shadow: 0 1px 0 rgba(255, 255, 255, .1) }
+.iCMS-profile-wrap .iCMS-user-home .name {margin-left: 4px;}
+.iCMS-profile-wrap .iCMS-user-home .dropdown-menu>li>a { font-size: 14px }
+.iCMS-hover-wrap { display: none; z-index: 999; position: absolute; top: 0; left: 0; min-width: 120px; border-radius: 0 0 3px 3px; background: #FFF }
+
 #iCMS-seccode { width: 60px }
 #iCMS-seccode-img { vertical-align: top }
 #iCMS-uname { font-size: 12px }
@@ -209,10 +219,11 @@ a, a:hover, a:focus { color: #057AFD }
 .iCMS-login-wrap .lb_bd .lb_s .lb_s_img { display: block; float: left; width: 43px; height: 43px }
 .iCMS-login-wrap .lb_bd .lb_s .lb_s_t { display: block; float: left; margin: 12px 0 0 12px; width: 120px; color: #333; font-size: 22px }
 .iCMS-API-iframe { width: 100% }
-.iCMS-comment-form-wrap { margin: 0px auto 20px auto; width: 600px; font-size: 14px }
-.iCMS-comment-form-wrap .alert { margin-bottom: 10px; padding: 4px 10px; font-size: 12px }
-.iCMS-cmt-user { display: none }
-.iCMS-cmt-login { margin: 10px 0px }
+.iCMS-comment-form-wrap { margin: 8px auto 20px auto; width: 600px; font-size: 14px }
+.iCMS-comment-form-wrap .alert { margin: 10px 0px; padding: 4px 10px; font-size: 12px }
+
+#iCMS-cmt-profile { display: none }
+#iCMS-cmt-login { margin: 10px 0px }
 .iCMS-cmt-editor { }
 .iCMS-editor-text { padding: 5px 10px; width: 580px; height: 90px; background: url(img/iCMS.logo.bg-6.0.png) no-repeat center center; font-size: 14px; line-height: 1.7 }
 .iCMS-cmt-command { text-align: right }
