--- a/public/ui/userApp-6.0.0.css
+++ b/public/ui/userApp-6.0.0.css
@@ -48,7 +48,7 @@ html.no-touch .commentApp-box .load-more:hover { background: #fefefe; text-decor
 .commentApp-op-link { margin-left: .5em; color: #999; font-size: 12px; visibility: hidden }
 .app-command-cancel { margin: 0 15px 0 0; cursor: pointer; float: left; }
 .app-command-cancel:hover { text-decoration: underline }
-.zg-icon-comment-like, .commentApp-op-link>.iCMS-icon { margin-right: 5px; width: 11px; height: 11px; vertical-align: -1px }
+.commentApp-op-link>.iCMS-icon { margin-right: 5px; width: 11px; height: 11px; vertical-align: -1px }
 
 
 /* userApp */
@@ -152,12 +152,13 @@ html.no-touch .commentApp-box .load-more:hover { background: #fefefe; text-decor
 .userApp-box #user_form { position: relative; }
 .userApp-box #user_form dl { margin-bottom: 12px; }
 .userApp-box #user_form dd { float: left; width: 105px; text-align: right; line-height: 26px; vertical-align: middle; color: #666; }
-.userApp-box #user_form dt { margin-bottom: 12px; font-size: 12px; color: #666; }
+.userApp-box #user_form dt { margin-bottom: 12px; font-size: 12px; color: #666;font-weight: normal; }
 .userApp-box .iner { _padding-top: -50px; display: inline; *vertical-align: 10px; }
-.userApp-box .basic select { width: 90px; font-size: 14px; }
-.userApp-box .basic textarea { height: 120px; width: 466px; border: 1px solid #cfcfcf; color: #666; padding: 5px; }
 .userApp-box .title { background: url(img/profile_title_bg.png) no-repeat; width: 649px; height: 30px; line-height: 30px; padding-left: 20px; margin-bottom: 10px; }
 .userApp-box .title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px; line-height: 30px; }
+
+#profile_box .base select { width: 90px; font-size: 14px; }
+#profile_box .base textarea { height: 120px; width: 466px; border: 1px solid #cfcfcf; color: #666; padding: 5px; }
 #profile_box .unick span { color: #f00; margin-left: 10px; margin-right: 5px; font-weight: bold; }
 #profile_box .unick { font-size: 12px; }
 #profile_box .pstyle, #profile_box .weibo input { width: 365px; }
@@ -197,3 +198,6 @@ html.no-touch .commentApp-box .load-more:hover { background: #fefefe; text-decor
 .account_bind .bind_logo li #bind_qq { clear: both; }
 .account_bind .bind_logo .bind_web .addSuccess { color: #690; line-height: 23px; padding-left: 12px; vertical-align: center; }
 .account_bind p.bind_tip { margin-top: 0; text-align: left; color: #999; }
+/*==manage==*/
+.publish{}
+.publish dd{width:auto !important;text-align:left;margin:0px 8px;}
