--- a/template/default/header.htm
+++ b/template/default/header.htm
@@ -7,12 +7,8 @@
         <a href="<!--{iCMS:router url='/api/user/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
       </div>
       <div class="nav_profile" id="iCMS-nav-profile">
-        <div class="top_nav_profile">
-          <a class="iCMS-user-home iCMS-hover-toggle" href="<!--{iCMS:router url='/user/home'}-->">
-          <img class="avatar" src="<!--{$site.urls.ui}-->/avatar.gif">
-          <span class="name">iCMS</span>
-          <b class="caret"></b>
-          </a>
+        <div class="iCMS-profile-wrap">
+          <a class="iCMS-user-home iCMS-hover-toggle" href="<!--{iCMS:router url='/user/home'}-->"><img class="avatar" src="<!--{$site.urls.ui}-->/avatar.gif"><span class="name">iCMS</span> <b class="caret"></b></a>
           <ul class="dropdown-menu iCMS-hover-wrap" id="iCMS-user-menu">
             <li> <a href="<!--{iCMS:router url='/user/home'}-->" target="_blank"> <i class="fa fa-user"></i> 我的主页</a> </li>
             <li> <a href="<!--{iCMS:router url='/user/article'}-->" target="_blank"> <i class="fa fa-cog"></i> 我的文章</a> </li>
