--- a/template/iCMS/comment/form.default.htm
+++ b/template/iCMS/comment/form.default.htm
@@ -11,38 +11,25 @@
 				window.parent.iCMS.LoginBox();
 				return false;
 			});
-            if (iCMS.user_status) {
-                iCMS.user.data();
-                //this.userinfo();
-                $(".iCMS-cmt-login").hide();
-                $(".iCMS-cmt-profile").show();
-                iCMS.hover(".iCMS-user-home", "#iCMS-user-menu", 21);
-            }
 		})
 		</script>
 	</head>
 	<body class="iCMS-comment-page">
 		<!--{/if}-->
 		<div class="iCMS-comment-form-wrap">
-			<div class="iCMS-cmt-profile">
-      <div class="nav_profile">
-        <div class="top_nav_profile">
-          <a class="iCMS-user-home hover-toggle" href="<!--{iCMS:router url='/user/home'}-->">
-          <img class="avatar" src="<!--{$site.urls.ui}-->/avatar.gif">
-          <span class="name">iCMS</span>
-          <b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu iCMS-hover" id="iCMS-user-menu">
-            <li> <a href="<!--{iCMS:router url='/user/home'}-->" target="_blank"> <i class="fa fa-user"></i> 我的主页</a> </li>
-            <li> <a href="<!--{iCMS:router url='/user/article'}-->" target="_blank"> <i class="fa fa-cog"></i> 我的文章</a> </li>
-            <li> <a href="<!--{iCMS:router url='/user/comment'}-->" target="_blank"> <i class="fa fa-cog"></i> 我的评论</a> </li>
-            <li> <a href="<!--{iCMS:router url='/user/profile'}-->" target="_blank"> <i class="fa fa-cog"></i> 设置</a> </li>
-            <li> <a href="javascript:;" class="iCMS-user-logout" target="_blank"> <i class="fa fa-power-off"></i> 退出</a> </li>
-          </ul>
-        </div>
-      </div>
+			<div id="iCMS-cmt-profile">
+				<div class="iCMS-profile-wrap">
+					<a class="iCMS-user-home hover-toggle" href="<!--{iCMS:router url='/user/home'}-->"><img class="avatar" src="<!--{$site.urls.ui}-->/avatar.gif"><span class="name">iCMS</span><b class="caret"></b></a>
+					<ul class="dropdown-menu iCMS-hover-wrap" id="iCMS-user-menu">
+						<li> <a href="<!--{iCMS:router url='/user/home'}-->" target="_blank"> <i class="fa fa-user"></i> 我的主页</a> </li>
+						<li> <a href="<!--{iCMS:router url='/user/article'}-->" target="_blank"> <i class="fa fa-cog"></i> 我的文章</a> </li>
+						<li> <a href="<!--{iCMS:router url='/user/comment'}-->" target="_blank"> <i class="fa fa-cog"></i> 我的评论</a> </li>
+						<li> <a href="<!--{iCMS:router url='/user/profile'}-->" target="_blank"> <i class="fa fa-cog"></i> 设置</a> </li>
+						<li> <a href="javascript:;" class="iCMS-user-logout" target="_blank"> <i class="fa fa-power-off"></i> 退出</a> </li>
+					</ul>
+				</div>
 			</div>
-			<div class="iCMS-cmt-login">
+			<div id="iCMS-cmt-login">
 				<a href="<!--{iCMS:router url='/api/user/login'}-->" class="iCMS-user-login" title="登录"><i class="fa fa-user"></i> 登录</a>
 				<a href="<!--{iCMS:router url='/api/user/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
 			</div>
@@ -65,10 +52,9 @@
 		$(function(){
             if (iCMS.user_status) {
                 iCMS.user.data();
-                //this.userinfo();
-                $(".iCMS-cmt-login").hide();
-                $(".iCMS-cmt-profile").show();
-                iCMS.hover(".iCMS-user-home", "#iCMS-user-menu", 21);
+                $("#iCMS-cmt-login").hide();
+                $("#iCMS-cmt-profile").show();
+                iCMS.hover("#iCMS-cmt-profile",".iCMS-user-home", "#iCMS-user-menu", 21);
             }
 		})
 		</script>
