--- a/template/iCMS/user/manage/publish.htm
+++ b/template/iCMS/user/manage/publish.htm
@@ -1,17 +1,41 @@
+<link href="<!--{$site.urls.lib}-->/umeditor/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
+<script type="text/javascript" charset="utf-8" src="<!--{$site.urls.lib}-->/umeditor/umeditor.config.js"></script>
+<script type="text/javascript" charset="utf-8" src="<!--{$site.urls.lib}-->/umeditor/umeditor.min.js"></script>
+<script type="text/javascript" src="<!--{$site.urls.lib}-->/umeditor/lang/zh-cn/zh-cn.js"></script>
+
 <div class="basic">
 	<form action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
-		<input name="action" type="hidden" value="profile" />
-		<input name="pg" type="hidden" value="base" />
+		<input name="action" type="hidden" value="manage" />
+		<input name="pg" type="hidden" value="publish" />
 		<div class="title"> <span>发表文章</span> </div>
-		<dl>
+		<dl class="publish">
+			<dd>栏 目：</dd>
+			<dt>
+              <select name="cid" id="cid" class="chosen-select span3">
+                <option value="0"> == 请选择所属栏目 == </option>
+                <!--{$option}-->
+              </select>				
+			</dt>
 			<dd>标 题：</dd>
 			<dt>
-				<input name="title" type="text" value="<!--{$userdata.weibo}-->">
+				<input class="span6" name="title" type="text" value="<!--{$article.title}-->">
 			</dt>
+			
+			<dd>简 介：</dd>
+			<dt>
+            	<textarea name="desc" id="desc" class="span6" style="height: 150px;width:460px;"><!--{$article.description}--></textarea>
+			</dt>
+			<dt>
+				<script type="text/plain" id="editor" style="width:100%;height:360px;"><!--{$article_data.body}--></script>
+			</dt>
+			<dt>
+				<div class="form-actions">
+					<button class="btn btn-primary" type="submit"><i class="fa fa-check"></i> 提交</button>
+				</div>
+		    </dt>
 		</dl>
 	</form>
 </div>
 <script type="text/javascript">
-$(function(){
-})
+    var um = UM.getEditor('editor');
 </script>
