--- a/template/iCMS/public.dialog.htm
+++ b/template/iCMS/public.dialog.htm
@@ -52,7 +52,7 @@
   </div>
 </div>
 <script type="text/javascript">
-<!--{include file="/iCMS/login.js"}-->
+<!--{include file="/iCMS/user/login.js"}-->
 </script>
 <div id="iCMS-comment-report">
   <div class="report_dialog">
