--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -128,7 +128,7 @@
             <!--{/if}-->
           </div>
           <ul>
-            <!--{iCMS:user:category loop="true" row="30" userid=$user.uid}-->
+            <!--{iCMS:user:category loop="true" userid=$user.uid}-->
             <li><a href="<!--{$user_category.url}-->"><!--{$user_category.name}--> <span>(<!--{$user_category.count}-->)</span></a></li>
             <!--{/iCMS}-->
           </ul>
