--- a/template/iCMS/user/manage/publish.htm
+++ b/template/iCMS/user/manage/publish.htm
@@ -1,41 +1,154 @@
+<link href="<!--{$site.urls.lib}-->/bootstrap/css/bootstrap-switch.css" type="text/css" rel="stylesheet" />
 <link href="<!--{$site.urls.lib}-->/umeditor/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
-<script type="text/javascript" charset="utf-8" src="<!--{$site.urls.lib}-->/umeditor/umeditor.config.js"></script>
-<script type="text/javascript" charset="utf-8" src="<!--{$site.urls.lib}-->/umeditor/umeditor.min.js"></script>
-<script type="text/javascript" src="<!--{$site.urls.lib}-->/umeditor/lang/zh-cn/zh-cn.js"></script>
+<script src="<!--{$site.urls.lib}-->/umeditor/umeditor.config.js" type="text/javascript" charset="utf-8"></script>
+<script src="<!--{$site.urls.lib}-->/umeditor/umeditor.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="<!--{$site.urls.lib}-->/umeditor/lang/zh-cn/zh-cn.js" type="text/javascript" ></script>
+<script src="<!--{$site.urls.lib}-->/bootstrap/js/bootstrap-switch.min.js"></script>
 
-<div class="basic">
-	<form action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
-		<input name="action" type="hidden" value="manage" />
-		<input name="pg" type="hidden" value="publish" />
-		<div class="title"> <span>发表文章</span> </div>
-		<dl class="publish">
-			<dd>栏 目：</dd>
-			<dt>
-              <select name="cid" id="cid" class="chosen-select span3">
-                <option value="0"> == 请选择所属栏目 == </option>
-                <!--{$option}-->
-              </select>				
-			</dt>
-			<dd>标 题：</dd>
-			<dt>
-				<input class="span6" name="title" type="text" value="<!--{$article.title}-->">
-			</dt>
-			
-			<dd>简 介：</dd>
-			<dt>
-            	<textarea name="desc" id="desc" class="span6" style="height: 150px;width:460px;"><!--{$article.description}--></textarea>
-			</dt>
-			<dt>
-				<script type="text/plain" id="editor" style="width:100%;height:360px;"><!--{$article_data.body}--></script>
-			</dt>
-			<dt>
-				<div class="form-actions">
-					<button class="btn btn-primary" type="submit"><i class="fa fa-check"></i> 提交</button>
-				</div>
-		    </dt>
-		</dl>
-	</form>
+<form action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
+	<input name="action" type="hidden" value="manage" />
+	<input name="pg" type="hidden" value="publish" />
+	<input name="id" type="hidden" value="<!--{$article.id}-->" />
+	<input name="ucid" id="ucid" type="hidden" value="0" />
+	<input name="_ucid" type="hidden" value="<!--{$article.ucid}-->" />
+	<input name="_cid" type="hidden" value="<!--{$article.cid}-->" />
+	<div class="title"><span>发表文章</span></div>
+	<div class="publish ml25">
+		<div class="input-prepend">
+			<span class="add-on">栏 目</span>
+			<select name="cid" id="cid" class="chosen-select span3">
+				<option value="0"> == 请选择所属栏目 == </option>
+				<!--{$option}-->
+			</select>
+		</div>
+        <div class="clearfloat mb10"></div>
+		<div class="input-prepend input-append">
+			<span class="add-on">标 题</span>
+			<input class="span6" name="title" id="title" type="text" value="<!--{$article.title}-->">
+			<div class="btn-group" id="btn-group">
+				<a class="btn dropdown-toggle" data-toggle="dropdown" tabindex="-1"> <span class="caret"></span> <span id="uc_select">默认分类</span></a>
+				<ul class="dropdown-menu">
+		            <!--{iCMS:user:category loop="true" userid=$user.uid}-->
+		            <li><a href="javascript:;" cid="<!--{$user_category.cid}-->" class="user_category"><!--{$user_category.name}--></a></li>
+		            <!--{/iCMS}-->
+		            <li id="user_category_0"><a href="javascript:;" cid="0" class="user_category">默认分类</a></li>
+					<li class="divider"></li>
+					<li><a href="javascript:;" title="添加分类" id="add_category"><i class="fa fa-edit"></i> 添加分类</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="clearfloat mb10"></div>
+		<div class="input-prepend">
+			<span class="add-on">关键字</span>
+			<input class="span6" name="keywords" id="keywords" type="text" value="<!--{$article.keywords}-->" onkeyup="javascript:this.value=this.value.replace(/，/ig,',');">
+		</div>
+		<div class="clearfloat mb10"></div>
+		<div class="input-prepend">
+			<span class="add-on">简 介</span>
+			<textarea name="description" id="description" class="span6" style="height:150px;width:550px;padding:5px;"><!--{$article.description}--></textarea>
+		</div>
+        <div class="input-prepend"> <span class="add-on">文章类型？</span>
+			<div class="switch" id="article-type" data-on-label="原创" data-off-label="转贴">
+				<input type="checkbox" data-type="switch" name="creative" <!--{if $article.creative}-->checked<!--{/if}-->/>
+			</div>
+        </div>
+		<div class="input-prepend <!--{if $article.creative}-->hide<!--{/if}-->" id="source-box">
+			<span class="add-on">出 处</span>
+			<input class="span5" name="source" id="source" type="text" value="<!--{$article.source}-->">
+		</div>
+        <div class="clearfloat mb10"></div>
+		<div class="clearfix ">
+			<script type="text/plain" id="editor" style="width:100%;height:360px;"><!--{$article_data.body}--></script>
+		</div>
+
+		<div class="form-actions">
+			<button class="btn btn-primary" type="submit" id="iCMS-article"><i class="fa fa-check"></i> 提交</button>
+		</div>
+	</div>
+</form>
+<div id="add_category-box" style="display: none;">
+  <input class="span3" id="newcategoryname" type="text" placeholder="请输入分类名称">
 </div>
+
 <script type="text/javascript">
-    var um = UM.getEditor('editor');
+
+$(function(){
+	<!--{if $article.cid}-->
+	$("#cid").val("<!--{$article.cid}-->");
+	<!--{/if}-->
+	var ed = UM.getEditor('editor');
+	$("#iCMS-article").click(function(){
+		if($("#cid option:selected").val()=="0"){
+			alert("请选择所属栏目");
+			$("#cid").focus();
+			return false;
+		}
+		if($("#title").val()==''){
+			alert("标题不能为空!");
+			$("#title").focus();
+			return false;
+		}
+		if(!ed.hasContents()){
+			alert("内容不能为空!");
+			ed.focus();
+			return false;
+		}
+	});
+
+	$('#article-type').on('switch-change', function (e, data) {
+	    var value = data.value;
+	    if(data.value){
+	    	$('#source-box').hide();
+	    	$('#source').val('');
+	    }else{
+	    	$('#source-box').show();
+	    }
+	});
+
+	$(document).on('click', '.user_category', function() {
+    	event.preventDefault();
+		var $this = $(this),
+		cid       = $this.attr("cid"),
+		name      = $this.text();
+        $("#ucid").val(cid);
+        $("#uc_select").text(name);
+        $this.parent().parent().parent().removeClass("open");
+        return false;
+    });
+    $('#add_category').click(function() {
+  		$.dialog({
+  		    follow: document.getElementById('btn-group'),
+  		    title: '创建新目录',
+  		    content: document.getElementById('add_category-box'),
+  		    button: [{
+  		    	id: 'add_category-btn',
+  		    	value: '添加',
+  				callback: function () {
+  			        var a = $("#newcategoryname"),n = a.val(),d=this;
+  			        if(n==""){
+  			        	alert("请输入分类名称!");
+  			        	a.focus();
+  			        	return false;
+  			        }else{
+  			        	$.post('<!--{iCMS:router url='/user'}-->',{'action': 'add_category',name:n},function(j){
+  			        		if(j.code){
+  				        		d.content(j.msg)
+  			        			.button({id: 'add_category-btn',value: '完成',
+	  			        			callback: function () {
+	  			        				$("#user_category_0").before('<li><a href="javascript:;" cid="'+j.forward+'" class="user_category">'+n+'</a></li>');
+	  			        			}
+  			        			});
+  			        		}else{
+  			        			alert(j.msg);
+  			        			a.focus();
+  			        			return false;
+  			        		}
+  			        	},"json");
+  			        }
+  			        return false;
+  				}}]
+  		});
+    });
+
+});
 </script>
