--- a/template/iCMS/user/register.htm
+++ b/template/iCMS/user/register.htm
@@ -9,7 +9,7 @@
     <!--{iCMS:public:ui}-->
     <link rel="stylesheet" href="<!--{$site.urls.ui}-->/loginreg.css" type="text/css" />
     <script type="text/javascript">
-    <!--{include file="/iCMS/register.js"}-->
+    <!--{include file="/iCMS/user/register.js"}-->
     </script>
   </head>
   <body>
